# lib-finance-server

./: pyproject.toml  tox.ini
api-backend/: go.mod
api-backend/src/: main.go
api-gateway/: go.mod
website/: manage.py  pyproject.toml
website/tests/: test_mock.py
website/website/: settings.py
www-backend/: go.mod
