[project]
name = "website"
version = "0.1.0"
description = "core platform"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "django-filter>=25.1",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
]

